# E2E-Self-Heal

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  action.yml  pyproject.toml  roadmap.en.md  roadmap.ko.md
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
app/: cli.py  config.py  graph.py  llm.py  notifications.py  runner.py  sandbox.py  schemas.py  state.py
app/memory/: __init__.py  node.py  schemas.py  similarity.py  store.py
app/nodes/: diagnoser.py  memory.py  patch_generator.py  shadow_verifier.py  test_runner.py
ci/: github-workflow.example.yml
docs/: RELEASING.md  design.md  shadow-testing.md
examples/: README.md  example.spec.ts  index.html  package-lock.json  package.json  playwright.config.ts  selector-rename.diff
tests/: test_aria_snapshot.py  test_cli.py  test_diff_ast_analyzer.py  test_error_log_parser.py  test_failure_scanner.py  test_files.py  test_graph.py  test_har_parser.py  test_llm.py  test_matching_engine.py  test_memory_node.py  test_memory_similarity.py  test_memory_store.py  test_notifications.py  test_patch_apply.py  test_patch_generator.py  test_patch_prompt_strategy.py  test_repair_loop.py  test_reviewer.py  test_runner.py  test_sandbox.py  test_selector_check.py  test_selector_hint.py  test_shadow_config.py  test_shadow_runtime.py  test_shadow_verifier.py  test_shadow_workspace.py  test_snapshot_store.py  test_suite_heal.py
(+22 files in other folders)
