[project]
name = "ai-driven-e2e"
version = "0.1.0"
description = "LangGraph-based AI-driven E2E test self-healing engine (CLI core + CI integration)"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lee-Dongwook", email = "devgroup2@futureworklab.co.kr" }]
keywords = ["playwright", "e2e", "self-healing", "langgraph", "testing", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "langgraph>=0.2",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=8.3",
    "rich>=13.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Lee-Dongwook/ai-driven-e2e"
Repository = "https://github.com/Lee-Dongwook/ai-driven-e2e"
Issues = "https://github.com/Lee-Dongwook/ai-driven-e2e/issues"

[project.scripts]
e2e-healer = "app.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
